<resources>
    <string name="app_name">智能秤</string>

    <string name="string_previous_page">上一页</string>
    <string name="string_next_page">下一页</string>
    <string name="string_prev_day">前一天</string>
    <string name="string_next_day">后一天</string>
    <string name="string_previous_month">上一月</string>
    <string name="string_next_month">下一月</string>
    <string name="string_delete">删除</string>
    <string name="string_login_txt">登&#160;录</string>
    <string name="string_home_txt1">高效</string>
    <string name="string_home_txt2">便捷</string>
    <string name="string_home_txt3">优质</string>
    <string name="string_home_txt4">廉价</string>
    <string name="string_home_user_hint_txt">请刷买方卡</string>
    <string name="string_home_pwd_hint_txt">请输入密码</string>
    <string name="string_home_remember_pwd_txt">记住密码</string>
    <string name="string_confirm">确&#160;认</string>
    <string name="string_cancel">取&#160;消</string>
    <string name="string_settings">设置</string>
    <string name="string_pay_cash">现金</string>
    <string name="string_scan_pay">扫码</string>
    <string name="string_clear">置&#160;零</string>
    <string name="string_bank_card">银行卡</string>
    <string name="string_cash">现&#160;金</string>
    <string name="string_compony_name">深圳市安鑫宝科技发展有限公司</string>
    <string name="string_stall_number">摊位号：</string>
    <string name="string_operator">司磅员：</string>
    <string name="string_grand_total_txt">累&#160;计</string>
    <string name="string_clear_txt">清除</string>
    <string name="string_useing_card">刷卡结算中...</string>
    <string name="string_cancel_txt">取&#160;&#160;&#160;消</string>
    <string name="string_cash_dialog_title">收银</string>
    <string name="string_total_cash">总货款：</string>
    <string name="string_rmb_txt">元</string>
    <string name="string_rounding_txt">取舍：</string>
    <string name="string_charge_cash_txt">收现金：</string>
    <string name="string_change_cash_txt">找零：</string>
    <string name="string_weight_txt">重量：</string>
    <string name="string_weight_unit_txt">斤</string>
    <string name="string_weight_unit_txt2">元/斤</string>
    <string name="string_variety_txt">品种：</string>
    <string name="string_grand_total_txt2">单价：</string>
    <string name="string_amount_txt2">金额：</string>
    <string name="string_amount_txt3">合计：%1$.2f 元</string>
    <string name="string_weight_unit_g">%1$s克</string>
    <string name="string_weight_unit_kg">%1$skg</string>

    <string name="string_switching_setting_txt">切换计重模式</string>
    <string name="string_patch_setting_txt">补打上笔</string>
    <string name="string_reports_setting_txt">数据汇总</string>
    <string name="string_server_setting_txt">服务器测试</string>
    <string name="string_order_setting_txt">订单作废</string>
    <string name="string_abnormal_setting_txt">异常订单</string>
    <string name="string_bd_setting_txt">标定管理</string>
    <string name="string_commodity_setting_txt">商品设置</string>
    <!--<string name="string_simple_mode_setting_txt">切换简易</string>-->
    <string name="string_update_setting_txt">数据更新</string>
    <string name="string_reconnection_txt">一键重连</string>
    <string name="string_wifi_setting_txt">WIFI设置</string>
    <string name="string_local_setting_txt">本机设置</string>
    <string name="string_system_setting_txt">系统设置</string>
    <string name="string_bluetooth_setting_txt">蓝牙设置</string>
    <string name="string_back_txt">返回</string>
    <string name="string_settings_back_txt">返回设置</string>
    <string name="string_reboot_txt">重启</string>
    <!--<string name="string_payment_setting_txt">支付设置</string>-->
    <string name="string_weight_setting_txt">称重</string>
    <string name="string_confirm_invalid_txt">确认作废数据</string>
    <string name="string_refreshing">扫描蓝牙中…</string>
    <string name="devices">设备列表</string>
    <string name="connecting">正在连接</string>
    <string name="scanning">扫描中...</string>
    <string name="scan">扫描</string>
    <string name="save_txt">保存</string>
    <string name="string_choose">选择</string>
    <string name="app_update_found_version">发现新版本</string>
    <string name="app_update_now">立即更新</string>
    <string name="app_update_ignore">稍后更新</string>

    <string name="str_printer_conn_normal">打印机连接正常</string>
    <string name="str_printer_out_of_paper">打印机缺纸</string>
    <string name="str_printer_open_cover">打印机开盖</string>
    <string name="str_printer_error">打印机出错</string>
    <string name="str_state">状态：</string>
    <string name="kilogram">kg</string>
    <string name="Administrators_pwd">88888888</string>
    <string name="string_login_out">退出登录</string>
    <string name="string_login_auto_txt">自动登录</string>
</resources>
