<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_3CB371"
    android:orientation="horizontal"
    tools:context="com.axecom.smartweight.my.activity.common.MainActivity">

    <LinearLayout
        style="@style/layout_style"
        android:layout_width="720dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/black" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <GridView
                android:id="@+id/simple_mode_commoditys_grid_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:horizontalSpacing="5dp"
                android:numColumns="5"
                android:verticalSpacing="5dp" />

            <Button
                android:layout_width="135dp"
                android:layout_height="100dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="13dp"
                android:layout_toLeftOf="@+id/simple_mode_grid_next_btn"
                android:background="@drawable/shape_btn_bg"
                android:text="@string/string_previous_page"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/simple_mode_grid_next_btn"
                android:layout_width="135dp"
                android:layout_height="100dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="13dp"
                android:layout_marginLeft="9dp"
                android:layout_marginRight="1dp"
                android:background="@drawable/shape_btn_bg"
                android:text="@string/string_next_page"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/layout_style"
        android:layout_width="565dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/simple_mode_settings_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_weight_display_bg"
                android:text="@string/string_settings"
                android:textSize="25sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_weight_display_bg"
                android:text="@string/string_clear"
                android:textSize="25sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_dotted_line"
            android:layerType="software" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="50dp"
                    android:gravity="center"
                    android:text="@string/string_weight_txt"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:text="0.000"
                    android:textColor="@color/red_000"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="@string/string_weight_unit_txt"
                    android:textColor="@color/black"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="50dp"
                    android:gravity="center"
                    android:text="@string/string_variety_txt"
                    android:textColor="@color/black"
                    android:textSize="20sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:text="紫甘蓝花菜"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="50dp"
                    android:gravity="center"
                    android:text="@string/string_weight_txt"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/shape_white_btn_bg"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="0.000"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_weight_unit_txt2"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="50dp"
                    android:gravity="center"
                    android:text="@string/string_weight_txt"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:text="0.000"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="@string/string_weight_unit_txt"
                    android:textColor="@color/black"
                    android:textSize="30sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="30dp"
                android:background="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="共 3 笔  ，180.56元"
                android:textColor="@color/black"
                android:textSize="40sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/shape_dotted_line"
            android:layerType="software" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/simple_mode_bank_card_btn"
                android:layout_width="180dp"
                android:layout_height="70dp"
                android:layout_marginLeft="80dp"
                android:background="@drawable/shape_weight_display_bg"
                android:text="@string/string_bank_card"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/simple_mode_cash_btn"
                android:layout_width="180dp"
                android:layout_height="70dp"
                android:layout_marginRight="80dp"
                android:background="@drawable/shape_weight_display_bg"
                android:text="@string/string_cash"
                android:textColor="@color/black"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        style="@style/layout_style"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/string_compony_name"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_stall_number"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="A005"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_operator"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="张三"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/shape_dotted_line" />

        <GridView
            android:id="@+id/simple_mode_digital_keys_grid_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:horizontalSpacing="2dp"
            android:numColumns="3"
            android:verticalSpacing="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="180dp"
                android:layout_height="80dp"
                android:layout_weight="2"
                android:background="@drawable/shape_weight_display_bg"
                android:text="@string/string_grand_total_txt"
                android:textColor="@color/black"
                android:textSize="35sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:background="@drawable/shape_weight_display_bg"
                android:text="@string/string_clear_txt"
                android:textColor="@color/black"
                android:textSize="35sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
