<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ContentDescription"
    android:gravity="center">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:scaleType="fitXY"
        android:src="@mipmap/login_bg" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#10FFFFFF"
        android:visibility="visible"
        />

    <LinearLayout
        android:layout_width="850dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/home_login_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:text="@string/string_login_txt"
            android:textColor="@color/green_3CB371"
            android:textSize="40sp"
           />

        <View
            android:layout_width="430dp"
            android:layout_height="1dp"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:background="@color/green_3CB371" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/shape_bg"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:src="@mipmap/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/string_home_txt1"
                    android:textColor="@color/green_3CB371"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/string_home_txt2"
                    android:textColor="@color/green_3CB371"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/string_home_txt3"
                    android:textColor="@color/green_3CB371"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/string_home_txt4"
                    android:textColor="@color/green_3CB371"
                    android:textSize="25sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="@dimen/x240"
                android:layout_marginRight="20dp"
                android:paddingStart="@dimen/x50"
                android:paddingEnd="@dimen/x50"
                android:text="@string/stringLauch"
                android:background="@drawable/selector_btn_epay"
                android:textColor="@color/selector_btn_text"
                android:textSize="25sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/x50"
                android:src="@mipmap/cloud" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/ivLog"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="10dp"
        android:src="@mipmap/log" />

</merge>
